<resources>
    <string name="app_name">RemindME</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="home">Home</string>
    <string name="logout">Log Out</string>
    <string name="account">Account</string>
    <string name="save">Save</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="stay_connect">Keep me connected ?</string>
    <string name="biometrics">Biometric log in</string>
    <string name="message">Message</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="date_content">%1$s/%2$s/%3$s</string>
    <string name="delete">Delete</string>
    <string name="content_description_delete">Delete Selected Reminder</string>
    <string name="add_calendar">Add to calendar ?</string>
    <string name="tab_reminders_due">Reminders Due</string>
    <string name="tab_reminders_all">All Reminders</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="sunday">S</string>
    <string name="saturday">S</string>
    <string name="recurring_reminders">Set a recurring reminder ?</string>
    <string name="recurring_date">Each %1$s</string>
    <string name="notif_reminder">Notification ?</string>
    <string name="snooze">Snooze</string>
    <string name="api_key">%1$s</string>
    <string name="time_based">Time based ?</string>
</resources>