<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity"
    >

    <ImageView
        android:layout_width="210dp"
        android:layout_height="234dp"
        app:layout_constraintVertical_bias="0.2"
        android:scaleType="centerInside"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_hourglass"
        android:id="@+id/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        android:textSize="25sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/sign_up"
        app:layout_constraintTop_toBottomOf="@id/app_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.Button"
        />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:text="@string/sign_in"
        app:layout_constraintTop_toBottomOf="@id/sign_up"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.Button"
        />
</androidx.constraintlayout.widget.ConstraintLayout>