<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/username"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="45sp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username"
        android:layout_width="match_parent"
        app:boxBackgroundColor="@color/white"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.4"
        android:hint="@string/username"
        android:textColorHint="?attr/colorPrimaryVariant"
        style="@style/Rounded"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/username_text"
            android:textColor="?attr/colorPrimary"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:boxBackgroundColor="@color/white"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.08"
        android:hint="@string/password"
        android:textColorHint="?attr/colorPrimaryVariant"
        style="@style/Rounded"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/username_password"
            android:textColor="?attr/colorPrimary"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/stay_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:visibility="gone"
        android:textSize="20sp"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="@id/password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintVertical_bias="0.02"
        android:text="@string/stay_connect"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/stay_connect"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <Button
            android:layout_gravity="center"
            android:id="@+id/connect_biometrics"
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="65dp"
            android:textColor="@color/white"
            android:text="@string/biometrics"
            android:textSize="15sp"
            android:layout_marginStart="20dp"
            android:backgroundTint="?attr/colorPrimary"
            style="@style/Widget.MaterialComponents.Button"
            />
        <Button
            android:layout_gravity="center"
            android:id="@+id/connect"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="65dp"
            android:textColor="@color/white"
            android:text="@string/submit"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="?attr/colorPrimary"
            style="@style/Widget.MaterialComponents.Button"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>