<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <include
            layout="@layout/navbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/toolbar_tab"
            android:background="@color/navy_blue"
            app:layout_constraintTop_toBottomOf="@id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabTextColor="@color/white"
            app:tabIndicatorColor="@color/white"
            app:tabMode="fixed">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/reminders_due"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_reminders_due"

                />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/reminders_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_reminders_all"
                />

        </com.google.android.material.tabs.TabLayout>

        <ListView
            android:id="@+id/list_reminders"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_tab"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="0dp"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/more_reminders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_add"
            android:contentDescription="@string/add_reminder"
            app:tint="@color/white"
            android:backgroundTint="?colorSecondary"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <include
        layout="@layout/navbar_drawer"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:layout_gravity="start"
        />
</androidx.drawerlayout.widget.DrawerLayout>